; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mc13783-core.c_mc13783_free_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mfd/extr_mc13783-core.c_mc13783_free_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc13783 = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@MC13783_NUM_IRQ = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mc13783_free_irq(%struct.mc13783* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mc13783*, align 8
  %5 = alloca i32, align 4
  store %struct.mc13783* %0, %struct.mc13783** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @MC13783_NUM_IRQ, align 4
  %11 = icmp sgt i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %8, %2
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %29

15:                                               ; preds = %8
  %16 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %17 = getelementptr inbounds %struct.mc13783, %struct.mc13783* %16, i32 0, i32 0
  %18 = call i32 @mutex_lock(i32* %17)
  %19 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %20 = getelementptr inbounds %struct.mc13783, %struct.mc13783* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  store i32* null, i32** %25, align 8
  %26 = load %struct.mc13783*, %struct.mc13783** %4, align 8
  %27 = getelementptr inbounds %struct.mc13783, %struct.mc13783* %26, i32 0, i32 0
  %28 = call i32 @mutex_unlock(i32* %27)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %15, %12
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
